- fixed bug when vertical scrollbar gets lost in WebKit

--- a/static/css/JooseIt.css
+++ b/static/css/JooseIt.css
@@ -90,3 +90,7 @@ a:VISITED {
 .jit_nav_button div {
 	left : 0px;
 }
+
+.x-masked {
+    overflow: auto !important;
+}
